# emhass-guide

./: .gitignore  README.md  netlify.toml  pyproject.toml
.github/workflows/: test-yaml.yml
src/content/docs/: automation.mdx  conclusion.mdx  emhass.mdx
src/includes/: battery_automation.yaml  emhass_script.patch  emhass_script.yaml
tests/: __init__.py  debug_combine.py  debug_ha_script.py  test_battery_automation.py  test_emhass_integration.py  test_yaml_validity.py
